--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cfO-c7-M0M">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cfO-c7-M0M">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -27,7 +27,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQQ-Kd-HIK">
-                                <rect key="frame" x="20" y="277.5" width="280" height="36"/>
+                                <rect key="frame" x="20" y="269.5" width="280" height="36"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                 <state key="normal" title="Sign up">
@@ -39,7 +39,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8c-tq-TPY">
-                                <rect key="frame" x="20" y="323.5" width="280" height="36"/>
+                                <rect key="frame" x="20" y="311.5" width="280" height="36"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Facebook" image="facebook">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -49,7 +49,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbe-fy-czQ">
-                                <rect key="frame" x="20" y="369.5" width="280" height="36"/>
+                                <rect key="frame" x="20" y="353.5" width="280" height="36"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Google +" image="googlePlus">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -66,7 +66,7 @@
                                         <color key="tintColor" red="0.19539620539999999" green="0.64670758930000005" blue="0.85485491069999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                         <connections>
                                             <outlet property="delegate" destination="cfO-c7-M0M" id="SZ3-pW-BEe"/>
                                         </connections>
@@ -82,7 +82,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vy7-6h-lhH">
-                                <rect key="frame" x="20" y="166" width="280" height="36"/>
+                                <rect key="frame" x="20" y="162" width="280" height="36"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wGB-iC-I9p">
                                         <rect key="frame" x="3" y="2" width="234" height="32"/>
@@ -117,7 +117,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6aP-0D-MvR">
-                                <rect key="frame" x="20" y="232" width="280" height="35.5"/>
+                                <rect key="frame" x="20" y="228" width="280" height="35.5"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                 <state key="normal" title="Sign In">
@@ -128,7 +128,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXX-aV-kcM">
-                                <rect key="frame" x="20" y="415.5" width="280" height="36"/>
+                                <rect key="frame" x="20" y="395.5" width="280" height="36"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Twitter" image="twitter">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -141,7 +141,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="0LV-cI-Cls"/>
-                            <constraint firstItem="vXX-aV-kcM" firstAttribute="top" secondItem="tbe-fy-czQ" secondAttribute="bottom" constant="10" id="2HO-wJ-8kk"/>
+                            <constraint firstItem="vXX-aV-kcM" firstAttribute="top" secondItem="tbe-fy-czQ" secondAttribute="bottom" constant="6" id="2HO-wJ-8kk"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="2fV-RF-XyS"/>
                             <constraint firstItem="WQQ-Kd-HIK" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="6yC-16-3KW"/>
                             <constraint firstItem="fat-sJ-GFk" firstAttribute="top" secondItem="rSL-S1-vD7" secondAttribute="bottom" id="Em5-5y-dKz"/>
@@ -150,7 +150,7 @@
                             <constraint firstItem="WQQ-Kd-HIK" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="MXs-H1-vr3"/>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="N3T-ZZ-Jsj"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="OM9-Hd-VLA"/>
-                            <constraint firstItem="tbe-fy-czQ" firstAttribute="top" secondItem="T8c-tq-TPY" secondAttribute="bottom" constant="10" id="Pes-eV-Cp7"/>
+                            <constraint firstItem="tbe-fy-czQ" firstAttribute="top" secondItem="T8c-tq-TPY" secondAttribute="bottom" constant="6" id="Pes-eV-Cp7"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="Pu6-iE-nBB"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="QZP-Wg-h7z"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="RfF-rg-u2w"/>
@@ -159,7 +159,7 @@
                             <constraint firstItem="AIx-Ra-xZK" firstAttribute="leading" secondItem="ahs-FQ-cd2" secondAttribute="leading" constant="20" id="XX2-cg-TwY"/>
                             <constraint firstItem="vy7-6h-lhH" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="Xf6-hA-sob"/>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="ZVC-n5-iwa"/>
-                            <constraint firstItem="vy7-6h-lhH" firstAttribute="top" secondItem="AIx-Ra-xZK" secondAttribute="bottom" constant="10" id="cFW-Qx-fGJ"/>
+                            <constraint firstItem="vy7-6h-lhH" firstAttribute="top" secondItem="AIx-Ra-xZK" secondAttribute="bottom" constant="6" id="cFW-Qx-fGJ"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="cLq-sC-Pf5"/>
                             <constraint firstItem="rSL-S1-vD7" firstAttribute="leading" secondItem="ahs-FQ-cd2" secondAttribute="leading" id="egt-KQ-XC9"/>
                             <constraint firstItem="vy7-6h-lhH" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="exU-Q7-5sF"/>
@@ -171,13 +171,13 @@
                             <constraint firstItem="6aP-0D-MvR" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="mW6-e6-9i8"/>
                             <constraint firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" constant="20" id="mX6-87-YSM"/>
                             <constraint firstItem="6aP-0D-MvR" firstAttribute="top" secondItem="vy7-6h-lhH" secondAttribute="bottom" constant="30" id="mbO-Zm-viZ"/>
-                            <constraint firstItem="T8c-tq-TPY" firstAttribute="top" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" constant="10" id="njI-c9-x9J"/>
+                            <constraint firstItem="T8c-tq-TPY" firstAttribute="top" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" constant="6" id="njI-c9-x9J"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="trailing" secondItem="tbe-fy-czQ" secondAttribute="trailing" id="pY9-vL-AEW"/>
                             <constraint firstAttribute="trailing" secondItem="rSL-S1-vD7" secondAttribute="trailing" id="pZE-d3-tLc"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="sDC-Ru-Ser"/>
                             <constraint firstItem="AIx-Ra-xZK" firstAttribute="top" secondItem="SFG-JX-bEp" secondAttribute="bottom" constant="100" id="xye-XJ-EzL"/>
                             <constraint firstItem="6aP-0D-MvR" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="ygc-H9-BDc"/>
-                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="top" secondItem="6aP-0D-MvR" secondAttribute="bottom" constant="10" id="yzq-oT-nVM"/>
+                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="top" secondItem="6aP-0D-MvR" secondAttribute="bottom" constant="6" id="yzq-oT-nVM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -221,7 +221,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                 <connections>
                                     <outlet property="delegate" destination="H6R-h1-k9P" id="HAV-Wy-Lpp"/>
                                 </connections>
@@ -326,6 +326,7 @@
                             <view contentMode="scaleToFill" restorationIdentifier="GADBannerView" translatesAutoresizingMaskIntoConstraints="NO" id="7J1-bL-8zx" customClass="GADBannerView">
                                 <rect key="frame" x="0.0" y="518" width="320" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="I7a-Pv-TLw"/>
                                 </constraints>
@@ -404,8 +405,8 @@
                                                     <color key="textColor" red="0.40784313725490196" green="0.40784313725490196" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="348 Kim Ngưu" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0Q-JC-jvl">
-                                                    <rect key="frame" x="60" y="37" width="255" height="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0Q-JC-jvl">
+                                                    <rect key="frame" x="60" y="37" width="255" height="0.0"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.40784313725490196" green="0.40784313725490196" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -648,7 +649,7 @@
         <image name="googlePlus" width="30" height="30"/>
         <image name="ic_avar" width="75" height="75"/>
         <image name="ico_search" width="18" height="18"/>
-        <image name="icon_close" width="20" height="20"/>
+        <image name="icon_close" width="40" height="40"/>
         <image name="shareLocation" width="30" height="30"/>
         <image name="showPassword" width="35" height="35"/>
         <image name="twitter" width="35" height="35"/>
