--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cfO-c7-M0M">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cfO-c7-M0M">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -26,11 +26,12 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="rSL-S1-vD7">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQQ-Kd-HIK">
-                                <rect key="frame" x="20" y="269.5" width="280" height="36"/>
-                                <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
-                                <state key="normal" title="Sign up">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQQ-Kd-HIK">
+                                <rect key="frame" x="72.5" y="528" width="175" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="y8Q-FJ-Qzk"/>
+                                </constraints>
+                                <state key="normal" title="Register new account">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -38,8 +39,15 @@
                                     <segue destination="H6R-h1-k9P" kind="show" id="hb8-z2-Ji2"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ox-bQ-bik">
+                                <rect key="frame" x="72.5" y="561" width="175" height="1"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="C2k-h1-YfK"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8c-tq-TPY">
-                                <rect key="frame" x="20" y="311.5" width="280" height="36"/>
+                                <rect key="frame" x="20" y="299.5" width="280" height="36"/>
                                 <color key="backgroundColor" red="0.16470588235294117" green="0.36470588235294116" blue="0.58431372549019611" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Facebook" image="facebook">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -49,7 +57,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbe-fy-czQ">
-                                <rect key="frame" x="20" y="353.5" width="280" height="36"/>
+                                <rect key="frame" x="20" y="341.5" width="280" height="36"/>
                                 <color key="backgroundColor" red="0.82745098039215681" green="0.050980392156862744" blue="0.050980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Google" image="googlePlus">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -95,7 +103,7 @@
                                         </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t7Z-f5-gZy">
-                                        <rect key="frame" x="240" y="1" width="35" height="35"/>
+                                        <rect key="frame" x="240" y="0.5" width="35" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="esH-1U-Zwq"/>
                                             <constraint firstAttribute="width" constant="35" id="evd-4X-miL"/>
@@ -117,7 +125,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6aP-0D-MvR">
-                                <rect key="frame" x="20" y="228" width="280" height="35.5"/>
+                                <rect key="frame" x="20" y="258" width="280" height="35.5"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                 <state key="normal" title="Sign In">
@@ -128,7 +136,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXX-aV-kcM">
-                                <rect key="frame" x="20" y="395.5" width="280" height="36"/>
+                                <rect key="frame" x="20" y="383.5" width="280" height="36"/>
                                 <color key="backgroundColor" red="0.0" green="0.72941176470588232" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Twitter" image="twitter">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -137,27 +145,43 @@
                                     <action selector="tappedSignWithTwitter:" destination="cfO-c7-M0M" eventType="touchUpInside" id="j2S-Ag-Hhh"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Znq-JG-l15">
+                                <rect key="frame" x="191" y="203" width="109" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="K7S-1s-MXS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Forgot password">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="tappedForgotPassword:" destination="cfO-c7-M0M" eventType="touchUpInside" id="Omb-vP-odj"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="0LV-cI-Cls"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="top" secondItem="tbe-fy-czQ" secondAttribute="bottom" constant="6" id="2HO-wJ-8kk"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="2fV-RF-XyS"/>
-                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="6yC-16-3KW"/>
+                            <constraint firstItem="fat-sJ-GFk" firstAttribute="top" secondItem="3Ox-bQ-bik" secondAttribute="bottom" constant="6" id="A3h-9s-PDs"/>
+                            <constraint firstItem="T8c-tq-TPY" firstAttribute="top" secondItem="6aP-0D-MvR" secondAttribute="bottom" constant="6" id="BSz-FS-8ls"/>
+                            <constraint firstItem="Znq-JG-l15" firstAttribute="top" secondItem="vy7-6h-lhH" secondAttribute="bottom" constant="5" id="D5L-GF-Q3w"/>
                             <constraint firstItem="fat-sJ-GFk" firstAttribute="top" secondItem="rSL-S1-vD7" secondAttribute="bottom" id="Em5-5y-dKz"/>
-                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="JcE-Qx-tgz"/>
+                            <constraint firstItem="3Ox-bQ-bik" firstAttribute="width" secondItem="WQQ-Kd-HIK" secondAttribute="width" id="F4Q-su-qWr"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="LEQ-Sg-hTA"/>
-                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="MXs-H1-vr3"/>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="N3T-ZZ-Jsj"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="OM9-Hd-VLA"/>
-                            <constraint firstItem="tbe-fy-czQ" firstAttribute="top" secondItem="T8c-tq-TPY" secondAttribute="bottom" constant="6" id="Pes-eV-Cp7"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="Pu6-iE-nBB"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="QZP-Wg-h7z"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="RfF-rg-u2w"/>
-                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="SMC-qC-1mo"/>
                             <constraint firstItem="6aP-0D-MvR" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="TXr-H0-Flh"/>
+                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="centerX" secondItem="ahs-FQ-cd2" secondAttribute="centerX" id="WRh-Cj-pGU"/>
+                            <constraint firstItem="3Ox-bQ-bik" firstAttribute="centerX" secondItem="ahs-FQ-cd2" secondAttribute="centerX" id="XPT-63-5nE"/>
                             <constraint firstItem="AIx-Ra-xZK" firstAttribute="leading" secondItem="ahs-FQ-cd2" secondAttribute="leading" constant="20" id="XX2-cg-TwY"/>
                             <constraint firstItem="vy7-6h-lhH" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="Xf6-hA-sob"/>
+                            <constraint firstItem="Znq-JG-l15" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="Xfa-Gn-Nhb"/>
+                            <constraint firstItem="fat-sJ-GFk" firstAttribute="top" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" id="ZIV-hJ-l8K"/>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="ZVC-n5-iwa"/>
                             <constraint firstItem="vy7-6h-lhH" firstAttribute="top" secondItem="AIx-Ra-xZK" secondAttribute="bottom" constant="6" id="cFW-Qx-fGJ"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" id="cLq-sC-Pf5"/>
@@ -170,14 +194,13 @@
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="leading" secondItem="tbe-fy-czQ" secondAttribute="leading" id="mDS-hD-gIv"/>
                             <constraint firstItem="6aP-0D-MvR" firstAttribute="width" secondItem="AIx-Ra-xZK" secondAttribute="width" id="mW6-e6-9i8"/>
                             <constraint firstAttribute="trailing" secondItem="AIx-Ra-xZK" secondAttribute="trailing" constant="20" id="mX6-87-YSM"/>
-                            <constraint firstItem="6aP-0D-MvR" firstAttribute="top" secondItem="vy7-6h-lhH" secondAttribute="bottom" constant="30" id="mbO-Zm-viZ"/>
-                            <constraint firstItem="T8c-tq-TPY" firstAttribute="top" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" constant="6" id="njI-c9-x9J"/>
+                            <constraint firstItem="6aP-0D-MvR" firstAttribute="top" secondItem="vy7-6h-lhH" secondAttribute="bottom" constant="60" id="mbO-Zm-viZ"/>
                             <constraint firstItem="vXX-aV-kcM" firstAttribute="trailing" secondItem="tbe-fy-czQ" secondAttribute="trailing" id="pY9-vL-AEW"/>
                             <constraint firstAttribute="trailing" secondItem="rSL-S1-vD7" secondAttribute="trailing" id="pZE-d3-tLc"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="sDC-Ru-Ser"/>
+                            <constraint firstItem="tbe-fy-czQ" firstAttribute="top" secondItem="T8c-tq-TPY" secondAttribute="bottom" constant="6" id="srL-jC-XAw"/>
                             <constraint firstItem="AIx-Ra-xZK" firstAttribute="top" secondItem="SFG-JX-bEp" secondAttribute="bottom" constant="100" id="xye-XJ-EzL"/>
                             <constraint firstItem="6aP-0D-MvR" firstAttribute="height" secondItem="AIx-Ra-xZK" secondAttribute="height" id="ygc-H9-BDc"/>
-                            <constraint firstItem="WQQ-Kd-HIK" firstAttribute="top" secondItem="6aP-0D-MvR" secondAttribute="bottom" constant="6" id="yzq-oT-nVM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -195,7 +218,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uwG-yr-2Th" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-697" y="118"/>
+            <point key="canvasLocation" x="-697.5" y="117.25352112676056"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="9lN-gm-K9B">
